--- a/site/src/index.html
+++ b/site/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Collects public reddit posts and comments from the /r/tasker and /r/taskernet subreddits that have links to https://taskernet.com. Search for collected links at https://pghant.github.io/taskernet-collector or use the /u/taskernet-collector Reddit bot.">
+  <meta name="keywords" content="Tasker, taskernet">
   <title>Taskernet Collector</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
